--- a/trunk/makedeb/control
+++ b/trunk/makedeb/control
@@ -4,9 +4,9 @@ Priority: optional
 Maintainer: donkyhotay <project-tether@googlegroups.com>
 Build-Depends: debhelper (>= 7)
 Standards-Version: 3.8.1
-Homepage: <insert the upstream URL, if relevant>
+Homepage: http://code.google.com/p/tether
 
 Package: moonpy
 Architecture: any
-Depends: python (>= 2.5.4), python-pygame (>= 1.8.0), python-imaging (>= 1.1.6), python-twisted-bin (>= 8.2.0), python-zope.interface (>= 3.5.2)
+Depends: python (>= 2.5.4), python-pygame (>= 1.8.0), python-twisted-bin (>= 8.2.0), python-zope.interface (>= 3.5.2)
 Description: An open source remake of Moonbase Commander
