--- a/trunk/server_scorched_moon/settings.conf
+++ b/trunk/server_scorched_moon/settings.conf
@@ -1,1 +1,1 @@
-# this is a blank settings file, feature not yet implemented
+# this is a blank settings file, loading settings from file has not been implemented yet
